Multiple database testing - jdbc driver loading fixed.