@@ -144,17 +144,30 @@
       </modules>
     </profile>
 
-    <profile>
-      <id>database</id>
-      <dependencies>
-        <dependency>
-           <groupId>${maven.jdbc.driver.group}</groupId>
-           <artifactId>${maven.jdbc.driver.artifact}</artifactId>
-           <version>${maven.jdbc.driver.version}</version>
-           <scope>test</scope>
-        </dependency>  
-      </dependencies>
-    </profile>
+  <profile>
+    <id>database</id>
+    <build>
+      <plugins>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <additionalClasspathElements>
+              <additionalClasspathElement>${maven.jdbc.driver.jar}</additionalClasspathElement>
+            </additionalClasspathElements>
+            <useSystemClassLoader>true</useSystemClassLoader>
+            <includes>
+              <include>**/*Test.java</include>
+            </includes>
+            <excludes>
+              <exclude>**/*AbstractTest.java</exclude>
+              <exclude>**/*JMS*Test.java</exclude>
+            </excludes>
+            <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
     
   </profiles>
     
